<resources>

    <!--Home-->
    <string name="welcome_message">Bem-vindo (a),</string>


    <!--Login-->
    <string name="password_textview">Senha</string>
    <string name="nusp_textview">Número USP</string>
    <string name="login_button_text">Entrar</string>
    <string name="signup_button_text">Cadastrar</string>


    <!--Server Fail-->
    <string name="no_server_connection">Não conseguimos nos conectar ao servidor</string>
    <string name="blame_server">Error no servidor</string>


    <!--Sign Up and Change Profile-->
    <string name="successful_signup">Usuário cadastrado com sucesso</string>
    <string name="unsuccessful_signup">Não conseguimos te cadastrar no sistema</string>
    <string name="register_change_title">Alterar Cadastro</string>
    <string name="change_name_button">Mudar Nome</string>
    <string name="change_password_button">Mudar senha</string>
    <string name="change_nusp_button">Mudar Nusp</string>
    <string name="type_new_name_string">Digite o novo nome</string>
    <string name="type_new_password_string">Digite a nova senha</string>
    <string name="confirm_password_text">Confirme sua senha</string>
    <string name="invalid_password">Senha incorreta</string>
    <string name="successful_profile_update">Cadastro alterado com sucesso</string>
    <string name="profile_title">Seu Perfil</string>
    <string name="logout_text">Sair</string>
    <string name="invalid_credential">Senha ou usuário inválidos</string>
    <string name="professor">Professor</string>
    <string name="student">Aluno</string>
    <string name="unsuccessful_profile_update">Não foi possível atualizar seu perfil</string>


    <!--Seminars and Attendance-->
    <string name="type_seminar_name">Digite o nome do seminário</string>
    <string name="successful_seminar_addition">Seminário adicionado</string>
    <string name="unsuccessful_seminar_addition">Não conseguimos adicionar o seminário</string>
    <string name="show_attendance">Mostrar Seminários Assistidos</string>
    <string name="attended_seminars">Seminários Assistidos</string>
    <string name="successful_attendance">Presença confirmada</string>
    <string name="unsuccessful_attendance">Não conseguimos confirmar sua presença</string>
    <string name="attended_students">Alunos presentes:</string>
    <string name="seminar_passcode_is">O código desse seminário é:</string>
    <string name="type_seminar_passcode">Digite o código do seminário</string>
    <string name="successful_postponed_attendance">Conexão reestabelecida e presença
        confirmada</string>
    <string name="unsuccessful_postponed_attendance">Conexão reestabelecida e presença não
        confirmada</string>


    <!--General-->
    <string name="app_name">Chamada</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="ok_message">OK</string>
    <string name="cancel_message">Cancelar</string>
    <string name="no_qr_reader">Problema no leitor de QR</string>
    <string name="image_file_error">Impossível criar arquivo de imagem</string>
    <string name="no_qr_found">Não encontramos código qr na imagem</string>
    <string name="loadingMessage">Carregando…</string>
    <string name="at_seminar">no seminário</string>
    <string name="wrong_passcode">Código incorreto</string>
    <string name="maybe">talvez</string>
    <string name="postponed_attendance">Sua presença será confirmada quando houver conexão com a internet</string>

</resources>
