<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlueish"
    android:weightSum="100"
    android:orientation="vertical"
    android:id="@+id/profileLayout"
    tools:context="com.example.gustavo.chamada.ProfileActivity">

    <TextView
        android:id="@+id/textView4"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:layout_weight="20"
        android:layout_height="0dp"
        android:text="@string/profile_title"
        android:textColor="@android:color/background_light"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:divider="@drawable/seminar_spacer"
        android:dividerPadding="10dp"
        android:showDividers="middle"
        android:layout_marginStart="8dp"
        android:layout_weight="80"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/showAttendanceButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@color/seminarButtonColor"
            android:textColor="@color/White"
            android:onClick="showAttendance"
            android:text="@string/show_attendance" />

        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/seminarButtonColor"
            android:textColor="@color/White"
            android:onClick="changeNameClick"
            android:text="@string/change_name_button" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/seminarButtonColor"
            android:textColor="@color/White"
            android:onClick="changePasswordClick"
            android:text="@string/change_password_button" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:onClick="logoutClick"
            android:background="@color/seminarButtonColor"
            android:textColor="@color/White"
            android:text="@string/logout_text" />
    </LinearLayout>

</android.widget.LinearLayout>
