<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlueish"
    android:visibility="visible"
    android:id="@+id/loginLayout"
    tools:context="com.example.gustavo.chamada.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <EditText
        android:id="@+id/nuspText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginStart="67dp"
        android:ems="10"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/senhaTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginStart="67dp"
        android:ems="10"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/senhaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/password_textview"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintLeft_toLeftOf="@+id/passwordText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/nuspTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/nusp_textview"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nuspText"
        app:layout_constraintLeft_toLeftOf="@+id/nuspText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <TextView
        android:id="@+id/noLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/warningOrange"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/noLoginTextView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:onClick="tryLogin"
            android:text="@string/login_button_text"
            android:visibility="visible"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="495dp" />

        <Button
            android:id="@+id/singupButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:onClick="startSignUpActivity"
            android:text="@string/signup_button_text"
            android:visibility="gone"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="504dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
